# wiigames_categorizer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
wiigames_categorizer/: __main__.py
wiigames_categorizer/configs/: __init__.py
wiigames_categorizer/models/: __init__.py  disc.py  settings.py
wiigames_categorizer/models/usbgx/: __init__.py  category.py  game.py  usbgx_model.py  usbloadergx.py
wiigames_categorizer/models/wiitdb/: __init__.py  game.py
wiigames_categorizer/modules/: __init__.py  all.py  developer_publisher.py  genre.py  modules.py  name.py  player.py
